# ampcons-service

./: .env  .gitignore  docker-compose.yml  mock-sensor.bash  readme.md  sensor-array.bash
ampcons-backend/: Cargo.toml  Dockerfile
ampcons-backend/docs/: api_docs.yaml
ampcons-backend/src/: main.rs
ampcons-backend/src/data/: measurements.rs  mod.rs
ampcons-backend/src/database/: influxdb.rs  measuremets.rs
ampcons-backend/src/routes/measurement/: get_current.rs  get_stats.rs  handlers.rs  insert_measurement.rs  mod.rs
ampcons-backend/src/utils/: macros.rs  mod.rs  responses.rs  route.rs
ampconsapp/: README.md  flutter_jank_metrics_01.json  pubspec.yaml
ampconsapp/android/app/: build.gradle
ampconsapp/ios/Runner/: Info.plist
ampconsapp/ios/Runner.xcodeproj/: project.pbxproj
ampconsapp/lib/: main.dart
ampconsapp/lib/components/: loading_page.dart  sensor_information.dart  stateful_wrapper.dart  summary_item.dart
ampconsapp/lib/models/: config.dart  measurement.dart  measurement_summary.dart  measuremet.dart  sensor.dart  user.dart
ampconsapp/lib/providers/: config_notifier.dart  config_provider.dart  measurements_notifier.dart  measurements_provider.dart  user_notifier.dart  user_provider.dart
ampconsapp/linux/: CMakeLists.txt  my_application.cc
ampconsapp/test/: widget_test.dart
ampconsapp/web/: index.html  manifest.json
ampconsapp/windows/: CMakeLists.txt
backend/: README.md  bun.lockb  index.ts  package.json
sensor/: ampcons.code-workspace  platformio.ini
sensor/main/: main.ino
sensor/src/: main.cpp
(+44 files in other folders)
