[package]
name = "ampcons-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.11"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
influxdb_rs = "0.2"
chrono = "0.4"
cargo-watch = "8.1.2"

[dev-dependencies]
cargo-watch = "8.1.2"
